--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.3.1",
     "gray-matter": "^4.0.3",
     "marked": "^4.0.18",
     "next": "12.2.4",
